[workspace]
resolver = "2"
members = [
    "api",
    "telemetry",
    "ban-engine",
    "license-server",
]

[workspace.package]
edition = "2021"
rust-version = "1.95"
license = "MIT"
publish = false

[workspace.dependencies]
# Async runtime + HTTP stack.
tokio              = { version = "1.41", features = ["macros", "rt-multi-thread", "signal", "net", "time", "sync", "fs", "io-util"] }
axum               = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "tower-log", "matched-path"] }
tower              = { version = "0.5", features = ["util"] }
tower-http         = { version = "0.6", features = ["trace", "limit", "timeout"] }
http               = "1.1"
http-body-util     = "0.1"
hyper              = { version = "1.5", features = ["server", "http1"] }

# Serialization.
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"

# Crypto (ban-engine rule-bundle verification).
ed25519-dalek      = { version = "2.2", default-features = false, features = ["std"] }
hex                = "0.4"
time               = { version = "0.3", features = ["parsing"] }

# Errors.
thiserror          = "2.0"
anyhow             = "1.0"   # binary-only — never used in library code per CLAUDE.md guardrail #8

# Tracing.
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# ML inference (CPU only for Phase 2; CUDA/CoreML deferred).
ort                = { version = "=2.0.0-rc.10", default-features = false, features = ["std", "ndarray", "download-binaries"] }

# behavioral-gamestate domain (server/telemetry):
#   libc        — POSIX shm_open/mmap + getsockopt(TCP_INFO) for the snapshot ring
#                 backend (isolated under snapshot/backends, cfg-gated, guardrail #1).
#   windows-sys — Win32 file-mapping for the same backend on Windows game hosts
#                 (referenced #[cfg(windows)] only).
#   rustfft     — FFT for the signal-178 refresh-aliasing spectral peak.
libc               = "0.2"
windows-sys        = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Memory"] }
rustfft            = "6.2"

[profile.release]
codegen-units = 1
lto           = "thin"
strip         = "symbols"
panic         = "abort"

[profile.dev]
debug = true
